--- a/src/main/resources/templates/division.html
+++ b/src/main/resources/templates/division.html
@@ -4,10 +4,10 @@
 <h4>For division put values 'a' and 'b' below:</h4>
 <form th:action="@{/calc/division/result}" method="get">
     <label>
-        <input type="text" name="a" placeholder="a">
+        <input type="number" step="any" name="a" required placeholder="a">
     </label>
     <label>
-        <input type="text" name="b" placeholder="b">
+        <input type="number" step="any" name="b" required placeholder="b">
     </label>
     <input type="submit">
 </form>
